--- a/public/css/general.css
+++ b/public/css/general.css
@@ -18,4 +18,20 @@ body {
 
 li{
     list-style: none;
+font-size: 22px;
+    float: left;
+    
 }
+main section article i{
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    top:-15px;
+} 
