--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,12 +4,18 @@ header {
     background-color: var(--amarillo);
     font-size: var(--paragraph);
     padding-bottom: 10px;
-}
+   
+    }
 
+    header .horizon{
+        
+        width: 100%;
+         height: 120px;
+    }
 header .burger-menu {
     background-color: var(--celeste);
     color: #fff;
-    width: 15px;
+    width: 25px;
     padding: 7px;
     border-radius: 5px;
     text-align: center;
@@ -17,17 +23,38 @@ header .burger-menu {
 }
 
 header .logo {
-    display: inline-block;
-    width: 130px;
+     display: inline-block; 
+     width: 48%; 
+     margin-top: 10px;
+     justify-content: center;
+   
+   
+   
+    
+    
     
 }
-
 
 /* search-bar */
 
 header .search-bar {
+ display: inline-block;
+ width:50% ;
+ 
+
+    /*margin-left: 15px;*/ 
+}
+header .search-bar input{
+    width: 75%;
+height: 30px;
+border-radius: 7px;
+border: none;
+}
+header button.boton{
     display: inline-block;
-    /*margin-left: 15px;*/
+width: 30px;
+height: 30px;
+   
 }
 
 /* Quota */
@@ -42,6 +69,8 @@ header .quota {
 header nav ul#top-list {
     margin-bottom: 25px;
 }
+
+
 
 
 
