--- a/public/css/home.css
+++ b/public/css/home.css
@@ -67,6 +67,7 @@ main.home {
 }
 
 
+
 /* ------------------------ */
 /* Tablet*/
 @media (min-width: 361px) {
@@ -83,6 +84,22 @@ main.home {
     .home .card .card-content .product-name {
         display: block;
     }
+
+
+    header .horizon{
+        width: 100%;
+        
+       
+    }
+    header .search-bar {
+       width: 45%;
+     
+       
+       }
+       header .search-bar input {
+       
+       }
+    
 }
 
 
@@ -104,6 +121,56 @@ main.home {
         align-items: center;
         width: 23.5%;
     }
+
+    
+header .horizon{
+    width: 100%;
+    height: 120px;
+    /* display: inline; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+}
+
+header button.boton{
+    height: 35px;
+    width: 35px;
+}
+
+header .logo {
+    display: inline-block;
+    width: 30%;
+    
+}
+header .search-bar {
+    width: 35%;
+    display: inline-block;
+       /*margin-left: 15px;*/ 
+      
+   }
+   header .search-bar input{
+       width: 80%;
+       height: 35px;
+   }
+
+   header p.quota {
+    text-align: center;
+    margin: 10px 0 20px;
+    font-size: 18px;
+}
+
+header .horizon2 nav{
+    width: 100%;
+   display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
+}
+header .horizon2 nav a{
+ margin-left: 15px;
+}
+
     
 }
 
