--- a/views/index.html
+++ b/views/index.html
@@ -7,18 +7,28 @@
     <title>Mercado Liebre</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+
+
+
+
+
 </head>
 <body>
     <header>
+        <div class="horizon">
         <div class="logo"><img src="images/logo-mercado-liebre.svg" class="logo__img">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Buscar productos, marcas">
-        </div>
-        <button><i class="fas fa-search"></i></button>
-        </div>
+        
+        <button class="boton"><i class="fas fa-search"></i></button>
+    </div>
             <p class="quota"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
-        <nav>
+        </div>
+
+        <div class="horizon2">
+            <nav>
             <ul id="top-list">
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
@@ -31,6 +41,7 @@
                 <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
+    </div>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
@@ -189,5 +200,7 @@
         <p class="copy">Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 
+
+    
 </body>
 </html>
