--- a/views/index.html
+++ b/views/index.html
@@ -36,8 +36,8 @@
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
-                <li><a href="#">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="register">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
+                <li><a href="login">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
                 <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
@@ -52,6 +52,8 @@
         </div>
         <section>
             <h3 class="section-title">Basado en tu ultima visita</h3>
+
+
             <article class="card">
                 <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de la cafetera">
                 <div class="card-content">
@@ -61,10 +63,12 @@
                     <div class="product-info">
                         <p>$6.770</p>
                         <p>40% OFF</p>
-                    </div>
+                    </div >
                     <h5 class="product-name">Cafetera Moulinex</h5>
                 </div>      
             </article>
+
+
             <article class="card">
                 <div>
                     <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
@@ -181,7 +185,9 @@
             </article>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footerflex">
+
         <article class="footer-article">
             <i class="fas fa-credit-card"></i>
             <h5>Pagá con tarjeta o en efectivo</h5>
@@ -198,6 +204,7 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
         </article>
         <p class="copy">Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</p>
+     </div>
     </footer>
 
 
